--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -49,7 +49,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Fruit'
 
-  /registrations:
+  /applications:
     post:
       description: register an app
       operationId: registerApp
@@ -64,14 +64,7 @@ paths:
           content:
             'application/json':
               schema:
-                type: object
-                properties:
-                  xApiKey:
-                    type: string
-                    description: api key
-
-
-  /applications:
+                $ref: '#/components/schemas/ApiKey'
     get:
       description: get the list of all applications
       operationId: getApplications
@@ -154,5 +147,12 @@ components:
           type: string
         contact:
           type: string
+
+    ApiKey:
+      type: object
+      properties:
+        XApiKey:
+          type: string
+          format: uuid
 
 
