--- a/application-impl/src/main/resources/application.properties
+++ b/application-impl/src/main/resources/application.properties
@@ -5,4 +5,10 @@ server.port=8080
 #spring.jackson.time-zone=UTC
 #spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
+# mode prod =none
+# mode dev =create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
 logging.level.org.springframework.web=INFO
