--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -220,3 +220,15 @@ components:
         userName:
           type: string
 
+    Rewards:
+      type: object
+      properties:
+        attributionDate:
+          type: string
+          format: date
+          nullable: false
+        badgeID:
+          type: long
+        userID:
+          type: string
+          format: uuid
