--- a/application-impl/pom.xml
+++ b/application-impl/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.heigvd.amt.projet2</groupId>
-    <artifactId>fruits-impl</artifactId>
+    <artifactId>application-impl</artifactId>
     <packaging>jar</packaging>
-    <name>fruits-impl</name>
+    <name>application-impl</name>
     <version>1.0.0</version>
 
     <properties>
