--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -19,6 +19,10 @@ paths:
       responses:
         '201':
           description: created
+          content:
+            'application/json':
+              schema:
+                type: string
 
     get:
       description: get the list of all badges
