--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -15,14 +15,18 @@ paths:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/Badge'
+              type: object
+              properties:
+                name:
+                  type: string
+                image:
+                  type: string
+                userName:
+                  type: string
+
       responses:
         '201':
           description: created
-          content:
-            'application/json':
-              schema:
-                type: string
 
     get:
       description: get the list of all badges
