--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -224,6 +224,8 @@ components:
     Event:
       type: object
       properties:
+        IDUser:
+          type: UUID
         userName:
           type: string
         action:
