--- a/application-impl/src/main/resources/application.properties
+++ b/application-impl/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8080
 
 # mode prod =none
 # mode dev =create-drop
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/AMT
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/AMT
 spring.datasource.username=root
 spring.datasource.password=password
 logging.level.org.springframework.web=INFO
