--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -22,7 +22,7 @@ paths:
           content:
             'plain/text':
               schema:
-                type: String
+                type: string
   /badges:
     post:
       description: create a badge
@@ -96,6 +96,50 @@ paths:
                 items:
                   $ref: '#/components/schemas/Application'
 
+  /pointscales:
+    post:
+      description: create a pointScale
+      operationId: createPointScale
+      requestBody:
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/PointScale'
+      responses:
+        '201':
+          description: created
+
+    get:
+      description: get the list of all PointScales
+      operationId: getPointScales
+      responses:
+        '200':
+          description: success
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PointScale'
+
+  /pointscales/{id}:
+    get:
+      description: get one pointScale, by id
+      operationId: getPointScale
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: success
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/PointScale'
+
 components:
   securitySchemes:
     #    bearerAuth:            # arbitrary name for the security scheme
@@ -156,11 +200,11 @@ components:
         appName:
           type: string
         nbEvents:
-          type: int
+          type: integer
         nbVotes:
-          type: int
+          type: integer
         nbMessages:
-          type: int
+          type: integer
 
     BadgeReward:
       type: object
@@ -185,4 +229,4 @@ components:
         name:
           type: string
         scale:
-          type: int
+          type: integer
