correction bug et ajout mi-test règles

--- a/application-impl/src/main/resources/api-spec.yaml
+++ b/application-impl/src/main/resources/api-spec.yaml
@@ -237,7 +237,7 @@ components:
           format: uuid
         timestamp:
           type: string
-          format: date
+          format: date-time
         userName:
           type: string
         action:
