--- a/application-impl/src/main/resources/application.properties
+++ b/application-impl/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/AMT
 spring.datasource.username=root
 spring.datasource.password=password
-logging.level.org.springframework.web=INFO
+#logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
