--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 services:
-    mysql:
+    mysql_api:
         image: mysql:8.0.21
         container_name: projet2
         restart: always
@@ -22,6 +22,6 @@ services:
             - PMA_HOST=mysql
         restart: always
         depends_on:
-            - mysql
+            - mysql_api
         ports:
             - "8888:80"
